Wed Jan  6 17:12:04 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* htlib/StringList.cc: fixed bug in StringList::Join (oops!)

Wed Jan  6 10:34:45 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.cc(AddDescription): Remove delete
	instruction that fouls up everything (it was removing descriptions
	as we add them!).

Wed Jan  6 14:52:11 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htlib/String.cc (allocate_space): Add missing [] to delete.

Wed Jan  6 05:53:02 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htcommon/DocumentRef.cc(AddDescription): Do not add non-word
	characters to the wordlist.

Wed Jan  6 00:28:19 1999  Hans-Peter Nilsson  <hp@axis.se>

	* cf_byname.html: Fixed html syntax "<br" and "/a>".

Tue Jan  5 22:40:58 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc: Check if we need to do backlink and date
	factoring (e.g. we don't if they're zero!), from a patch by Gilles.

Tue Jan  5 20:57:02 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* configure.in, htlib/Connection.cc: Check for strings.h for those
	platforms that don't have it.

Tue Jan  5 14:24:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.h: Added comments on the members (fields)
	of DocumentRef objects.

	* htcommon/defaults.cc: Added new option max_descriptions for
	limit on the number of descriptions to store (default 5, matches
	behavior pre 3.1.0b3).

	* htcommon/DocumentRef.cc: Support restriction of max_descriptions.

	* .version: Bump to 3.1.0b5dev.
	
Tue Jan  5 20:07:05 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* htdig/Retriever.cc: fixed bug in bad_querystring detection

Sat Jan  2 16:39:34 1999  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htdig/main.cc, htlib/Configuration.cc: Added warning message if
	the locale selection was not successful. (e.g. because the locale
	definition is not installed) config["locale"] is now set to the