@@ -20,7 +20,6 @@ RANLIB=		@RANLIB@
 MAKEDEPEND=	@HTDIG_TOP@/makedp
 FIND=		@FIND@
 AR=		@AR@
-INSTALL=	@INSTALL@
 INSTALL_PROGRAM= $(INSTALL)
 INSTALL_DATA=   $(INSTALL)
 PDF_PARSER=	@PDF_PARSER@
