@@ -1,3 +1,9 @@
+Wed Jan  6 17:50:55 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
+
+	* {.,htcommon,htdig,htfuzzy,htlib,htmerge,htnotify,htsearch}/
+	Makefile.in, Makefile.config.in: fixed relative path problem if
+	install-sh is used.
+
 Wed Jan  6 17:12:04 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
 
 	* htlib/StringList.cc: fixed bug in StringList::Join (oops!)
